Closed Bug 1547809 Opened 6 years ago Closed 6 years ago

Inspector no longer works on about:welcome

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla68
Tracking Status
firefox-esr60 --- unaffected
firefox67 --- unaffected
firefox68 --- verified

People

(Reporter: Mardak, Assigned: Waldo)

References

(Regression)

Details

(Keywords: regression)

This is a recent regression that I haven't bisected yet. Opening the inspector for about:welcome shows html/head/body but nothing can be expanded.

It's broken on nightly 68 20190429095544, but I happen to have an older mozilla-central that is still working built from https://hg.mozilla.org/mozilla-central/rev/7e40e33da3da2640e965a153254594a234231f76

So somewhere https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=7e40e33da3da2640e965a153254594a234231f76&tochange=420e18a75314b8123b515d8a93cbacd145ecb03c

Looks like it's bug 1544882 ?? There's other regressions there so this may very likely end up being a dupe?

first bad build:
https://hg.mozilla.org/integration/mozilla-inbound/rev/1b05b45b9abee67390ef1e69c6eb750172bb8015

last good build:
https://hg.mozilla.org/integration/mozilla-inbound/rev/a1d55f09d0239319f35ab3bfcf29d69d5d7fd7f5

https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=a1d55f09d0239319f35ab3bfcf29d69d5d7fd7f5&tochange=1b05b45b9abee67390ef1e69c6eb750172bb8015

Not sure if related, but I do see this in the console:

Full message: TypeError: this._containers is null
Full stack: getContainer@resource://devtools/client/inspector/markup/markup.js:550:5
_showNodeAsHovered@resource://devtools/client/inspector/markup/markup.js:434:28
_onToolboxPickerHover/<@resource://devtools/client/inspector/markup/markup.js:234:12
process@resource://gre/modules/Promise-backend.js:923:38
walkerLoop@resource://gre/modules/Promise-backend.js:807:29
Promise*scheduleWalkerLoop@resource://gre/modules/Promise-backend.js:740:19
schedulePromise@resource://gre/modules/Promise-backend.js:771:12
completePromise@resource://gre/modules/Promise-backend.js:708:12
checkForCompletion@resource://gre/modules/Promise-backend.js:568:9
resolver@resource://gre/modules/Promise-backend.js:575:29
Flags: needinfo?(jwalden)
Regressed by: 1544882

This doesn't immediately appear to be a duplicate of any other regressions. Will look shortly.

Flags: needinfo?(jwalden)
Assignee: nobody → jwalden
Pushed by jwalden@mit.edu: https://hg.mozilla.org/integration/mozilla-inbound/rev/ce9c122d9c32 Respond to partially-ignored review comments in bug 1544882, and incidentally fix a minor regression that nitpicking would have made a bit more obvious. :-| Aggressively, r=arai

Okay, in local testing the above push should do the trick. Problem was I was treating source-hook-returns-nullptr-but-succeeds as a failure, when really it should have been succeeds-but-no-load. There was a nit on the original patches with respect to the style of the relevant code, so I fixed the nit and did the driveby inversion of return value, in somewhat aggressive self-reviewed (or already-reviewed :-) ) fashion.

Component: Inspector → JavaScript Engine
Product: DevTools → Core
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla68

Looks good on nightly 68 20190501042112

Status: RESOLVED → VERIFIED
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.