Bug 1547809 - Respond to partially-ignored review comments in bug 1544882, and incidentally fix a minor regression that nitpicking would have made a bit more obvious.  :-|  Aggressively, r=arai